✨ Add PrismJS theme and code highlighting example

--- a/site/index.njk
+++ b/site/index.njk
@@ -11,3 +11,18 @@ Welcome to bento.dev.
   <li><a href="/en">English</a></li>
   <li><a href="/de">Deutsch</a></li>
 </ul>
+
+{% highlight 'js' %}
+import React from 'react';
+import {BentoFitText} from '@ampproject/bento-fit-text/react';
+import '@ampproject/bento-fit-text/styles.css';
+
+function App() {
+  return (
+    <BentoFitText>
+      Lorem ipsum dolor sit amet, has nisl nihil convenire et, vim at aeque
+      inermis reprehendunt.
+    </BentoFitText>
+  );
+}
+{% endhighlight %}
