--- a/styles/bento-dev.scss
+++ b/styles/bento-dev.scss
@@ -8,6 +8,7 @@
 @import 'components/_button';
 @import 'components/_link';
 @import 'components/_language-selector';
+@import 'components/_code';
 
 html,
 body {
