--- a/site/en/index.njk
+++ b/site/en/index.njk
@@ -14,6 +14,28 @@ tags: main
     <button class="bd-button --inverted">Documentation</button>
   </section>
 
+  <section class="bd-section bd-row bd-row__col-2">
+    <div class="bd-row__column">
+      <img
+        class="bd-section__image"
+        src="/assets/img/image-left.png"
+        alt="Supported Frameworks"
+      />
+    </div>
+
+    <div class="bd-row__column">
+      <h1 class="bd-section__title">
+        Bento works great with frameworks and CMS
+      </h1>
+      <p class="bd-section__body">
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+        eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+        voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+      </p>
+      <button class="bd-button">Get started with Bento</button>
+    </div>
+  </section>
+
   <section class="bd-section bd-row bd-row__col-2 bd-row--reverse">
     <div class="bd-row__column">
       <h1 class="bd-section__title">
@@ -28,35 +50,11 @@ tags: main
     </div>
 
     <div class="bd-row__column">
-      <svg style="max-width: 100%" class="bd-section__image">
-        <use
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          xlink:href="/assets/assets.svg#image-right"
-        ></use>
-      </svg>
-    </div>
-  </section>
-
-  <section class="bd-section bd-row bd-row__col-2">
-    <div class="bd-row__column">
-      <svg class="bd-section__image">
-        <use
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          xlink:href="/assets/assets.svg#image-left"
-        ></use>
-      </svg>
-    </div>
-
-    <div class="bd-row__column">
-      <h1 class="bd-section__title">
-        Bento works great with frameworks and CMS
-      </h1>
-      <p class="bd-section__body">
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-        eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
-        voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
-      </p>
-      <button class="bd-button">Get started with Bento</button>
+      <img
+        class="bd-section__image"
+        src="/assets/img/image-right.png"
+        alt="Bento Features"
+      />
     </div>
   </section>
 </div>
@@ -83,9 +81,15 @@ tags: main
     <section class="bd-section bd-row bd-row__col-3 --spacer-64">
       <div class="bd-row__column --vertical">
         <button class="bd-button--light --uppercase">carousel</button>
-        <button class="bd-button--light --inverted --uppercase">animation</button>
-        <button class="bd-button--light --inverted --uppercase">accordion</button>
-        <button class="bd-button--light --inverted --uppercase">autocomplete</button>
+        <button class="bd-button--light --inverted --uppercase">
+          animation
+        </button>
+        <button class="bd-button--light --inverted --uppercase">
+          accordion
+        </button>
+        <button class="bd-button--light --inverted --uppercase">
+          autocomplete
+        </button>
       </div>
       <div class="bd-row__column --grow"></div>
     </section>
